--- a/main.css
+++ b/main.css
@@ -20,3 +20,30 @@ main {
 	border-radius: 5px; 
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+h1, h2 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+h1 {
+	font-size: 40px;
+}
+
+h2 {
+	font-size: 30px;
+	margin-left: 1.2em;
+}
+
+main {
+	background: white; 
+	padding: 20px; 
+	border-radius: 5px; 
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+p {
+	font-size: 20px;
+	margin-left: 2em;
+	margin-bottom: 1em;
+}
